--- a/ninjapage.html
+++ b/ninjapage.html
@@ -13,7 +13,10 @@
         width: 854,
         height: 480,
         channel: "ninja"
+        layout: "video",
       });
     </script>
+<input type="text" name="channel" id="channel" />
+<input type="button" onClick="changeChannel(document.getElementById('channel').value)" value="Go" />
   </body>
 </html>
