--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
 <a href="ninjapage.html">Ninja</a>
 <a href="Dakotaz.html">Dakotaz</a>
 <a href="monstercatpage.html">Monstercat</a>
+<a href="Leffen.html">Leffen</a>
+<a href="ZeRo.html">ZeRo</a>
 </body>
 </html>
