--- a/Leffen.html
+++ b/Leffen.html
@@ -12,7 +12,7 @@
       new Twitch.Embed("twitch-embed", {
         width: 854,
         height: 480,
-        channel: "Leffen"
+        channel: "Ninja"
       });
     </script>
   </body>
