--- a/homepage.html
+++ b/homepage.html
@@ -6,5 +6,7 @@
 <a href="monstercatpage.html">Monstercat</a>
 <a href="Leffen.html">Leffen</a>
 <a href="ZeRo.html">ZeRo</a>
+<a href="Bazza.html">Bazza</a>
+<a href="Loserfruit.html">Lufu</a>
 </body>
 </html>
