--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ if (!pass1)
 history.go(-1);
 if (pass1.toLowerCase() == "letmein") {
 alert('You Got it Right!');
-window.open('homepage.html');
+window.open('123456789876543212345678.html');
 break;
 } 
 testV+=1;
