--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@ prompt('Access Denied - Password Incorrect, Please Try Again.','Password');
 if (pass1.toLowerCase()!="password" & testV ==3) 
 history.go(-1);
 return " ";
-} 
+}
+$(document).bind("contextmenu",function(e) {
+ e.preventDefault();
+});
 </SCRIPT>
 <CENTER>
 <FORM>
