--- a/index.html
+++ b/index.html
@@ -1,29 +1,14 @@
-<SCRIPT>
-function passWord() {
-var testV = 1;
-var pass1 = prompt('Please Enter Your Password',' ');
-while (testV < 3) {
-if (!pass1) 
-history.go(-1);
-if (pass1.toLowerCase() == "letmein") {
-alert('You Got it Right!');
-window.open('123456789876543212345678.html');
-break;
-} 
-testV+=1;
-var pass1 = 
-prompt('Access Denied - Password Incorrect, Please Try Again.','Password');
-}
-if (pass1.toLowerCase()!="password" & testV ==3) 
-history.go(-1);
-return " ";
-}
-$(document).bind("contextmenu",function(e) {
- e.preventDefault();
-});
-</SCRIPT>
-<CENTER>
-<FORM>
-<input type="button" value="Enter Protected Area" onClick="passWord()">
-</FORM>
-</CENTER>
+<html>
+<head>
+</head>
+<body>
+
+<script type="text/javascript">
+<!-- 
+eval(unescape('%66%75%6e%63%74%69%6f%6e%20%73%33%66%33%65%34%34%38%28%73%29%20%7b%0a%09%76%61%72%20%72%20%3d%20%22%22%3b%0a%09%76%61%72%20%74%6d%70%20%3d%20%73%2e%73%70%6c%69%74%28%22%32%30%34%35%39%33%38%39%22%29%3b%0a%09%73%20%3d%20%75%6e%65%73%63%61%70%65%28%74%6d%70%5b%30%5d%29%3b%0a%09%6b%20%3d%20%75%6e%65%73%63%61%70%65%28%74%6d%70%5b%31%5d%20%2b%20%22%36%36%37%39%31%31%22%29%3b%0a%09%66%6f%72%28%20%76%61%72%20%69%20%3d%20%30%3b%20%69%20%3c%20%73%2e%6c%65%6e%67%74%68%3b%20%69%2b%2b%29%20%7b%0a%09%09%72%20%2b%3d%20%53%74%72%69%6e%67%2e%66%72%6f%6d%43%68%61%72%43%6f%64%65%28%28%70%61%72%73%65%49%6e%74%28%6b%2e%63%68%61%72%41%74%28%69%25%6b%2e%6c%65%6e%67%74%68%29%29%5e%73%2e%63%68%61%72%43%6f%64%65%41%74%28%69%29%29%2b%2d%31%29%3b%0a%09%7d%0a%09%72%65%74%75%72%6e%20%72%3b%0a%7d%0a'));
+eval(unescape('%64%6f%63%75%6d%65%6e%74%2e%77%72%69%74%65%28%73%33%66%33%65%34%34%38%28%27') + '%3a%51%41%56%4f%53%5c%39%08%0c%6e%77%6e%63%70%6f%75%6a%23%78%64%72%73%51%71%72%62%2c%2f%24%79%0c%02%71%64%74%28%74%67%73%70%52%24%3b%23%3b%3a%08%0c%7e%63%72%26%74%67%71%71%30%28%38%27%76%7a%71%6f%76%70%2c%2d%54%6f%6f%64%72%61%28%47%6e%72%63%76%24%5f%72%7f%75%27%56%6b%75%75%7f%75%76%60%2d%2f%21%27%2e%2d%35%0f%0a%7f%6c%6f%68%63%23%20%73%60%73%7c%56%20%3a%24%31%2f%24%7e%07%0d%6c%60%28%28%23%76%67%71%71%37%28%28%08%0d%6e%63%75%74%77%76%7f%2a%6d%72%20%28%34%2d%35%0f%0a%6d%62%24%2c%74%60%7d%72%34%28%7c%71%4c%77%7d%63%76%41%60%7d%60%2f%2d%28%3f%3f%26%26%68%63%70%6c%6f%6c%69%24%23%20%7d%09%0e%67%68%63%71%7c%2f%2e%5d%79%77%20%4f%75%70%24%6f%77%28%55%6c%6f%60%74%23%2f%2f%39%0b%0e%7a%63%69%63%77%71%2e%71%76%63%6a%2c%2d%30%3a%32%33%31%3e%39%38%3d%3c%3d%32%33%37%3d%35%34%34%3d%34%37%30%3d%3c%2a%6c%77%67%6b%2e%2d%35%0f%0a%64%76%63%67%69%3e%07%0d%78%26%07%0a%74%61%71%70%52%29%3c%3b%3a%08%0c%7e%63%72%26%74%67%71%71%30%28%38%27%09%02%70%72%77%6b%74%70%2c%2a%4b%62%62%61%7d%75%20%42%63%6a%6f%63%67%28%28%27%56%6b%75%75%7f%75%76%60%24%48%66%62%76%74%7a%67%65%72%28%24%54%68%64%6b%72%60%26%5c%72%7b%26%47%6d%67%6f%6d%26%2e%2b%2f%58%63%75%73%7d%75%76%60%2a%23%3a%08%0c%77%0f%0a%6d%62%24%2c%74%60%7d%72%34%28%7c%71%4c%77%7d%63%76%41%60%7d%60%2f%2d%2b%3f%22%76%67%71%71%7d%72%7a%63%25%26%2e%20%74%61%71%70%52%24%3c%37%32%2c%26%07%0a%68%6d%71%70%75%76%78%26%6e%76%2e%27%33%2b%3b%0b%0e%76%63%77%7f%75%69%26%2a%20%22%3b%0b%0e%7b%0b%09%2c%2f%63%77%6d%77%6f%61%6a%70%2f%2a%61%63%69%63%2e%2a%65%71%68%70%63%7c%70%6c%6f%69%70%24%24%66%77%68%61%70%6f%75%6d%20%60%2c%26%75%0f%0a%26%63%2a%74%76%64%7e%60%69%72%4c%67%66%65%73%68%70%2c%28%35%08%0d%79%23%3d%0f%0c%38%35%51%41%51%43%57%53%38%07%0a%3c%43%43%4a%50%43%51%36%08%0d%3a%4e%51%52%49%3a%0b%0e%38%68%66%77%70%72%28%74%7b%76%63%3b%26%66%74%7c%73%76%68%2a%20%76%65%68%73%63%3b%21%4f%69%73%61%7a%20%50%74%75%70%63%61%77%6f%63%27%45%7a%67%63%24%24%75%6a%41%6f%63%62%6a%39%2a%70%63%73%71%5d%75%76%67%20%2c%25%38%07%0a%3c%37%42%55%56%4b%3d%07%0d%3b%37%4d%47%4e%52%43%56%3a20459389%37%35%35%35%35%32%39' + unescape('%27%29%29%3b'));
+// -->
+</script>
+<noscript><i>Javascript required</i></noscript>
+
+</html>
