--- a/index.html
+++ b/index.html
@@ -1,30 +1,16 @@
 
-<SCRIPT>
-function passWord() {
-var testV = 1;
-var pass1 = prompt('Please Enter Your Password',' ');
-while (testV < 3) {
-if (!pass1)
-history.go(-1);
-if (pass1.toLowerCase() == "treeremote") {
-alert('You Got it Right!');
-window.open('123456789876543212345678.html');
-break;
-}
-testV+=1;
-var pass1 =
-prompt('Access Denied - Password Incorrect, Please Try Again.','Password');
-}
-if (pass1.toLowerCase()!="password" & testV ==3)
-history.go(-1);
-return " ";
-}
-$(document).bind("contextmenu",function(e) {
-e.preventDefault();
-});
-</SCRIPT>
-<CENTER>
-<FORM>
-<input type="button" value="Enter Protected Area" onClick="passWord()">
-</FORM>
-</CENTER>
+<html>
+<head>
+</head>
+<body>
+
+<script type="text/javascript">
+<!-- 
+eval(unescape('%66%75%6e%63%74%69%6f%6e%20%62%35%61%35%34%65%66%65%64%28%73%29%20%7b%0a%09%76%61%72%20%72%20%3d%20%22%22%3b%0a%09%76%61%72%20%74%6d%70%20%3d%20%73%2e%73%70%6c%69%74%28%22%32%31%39%37%30%30%37%33%22%29%3b%0a%09%73%20%3d%20%75%6e%65%73%63%61%70%65%28%74%6d%70%5b%30%5d%29%3b%0a%09%6b%20%3d%20%75%6e%65%73%63%61%70%65%28%74%6d%70%5b%31%5d%20%2b%20%22%38%31%31%36%31%39%22%29%3b%0a%09%66%6f%72%28%20%76%61%72%20%69%20%3d%20%30%3b%20%69%20%3c%20%73%2e%6c%65%6e%67%74%68%3b%20%69%2b%2b%29%20%7b%0a%09%09%72%20%2b%3d%20%53%74%72%69%6e%67%2e%66%72%6f%6d%43%68%61%72%43%6f%64%65%28%28%70%61%72%73%65%49%6e%74%28%6b%2e%63%68%61%72%41%74%28%69%25%6b%2e%6c%65%6e%67%74%68%29%29%5e%73%2e%63%68%61%72%43%6f%64%65%41%74%28%69%29%29%2b%2d%39%29%3b%0a%09%7d%0a%09%72%65%74%75%72%6e%20%72%3b%0a%7d%0a'));
+eval(unescape('%64%6f%63%75%6d%65%6e%74%2e%77%72%69%74%65%28%62%35%61%35%34%65%66%65%64%28%27') + '%43%58%4f%52%55%51%5d%4f%17%12%69%7f%7e%6a%79%71%71%70%21%79%62%7d%7d%66%79%72%6b%35%31%20%83%1e%13%77%6b%7a%2f%7c%67%7a%79%5c%20%41%21%3a%4c%17%12%79%6b%72%2f%7d%69%75%7b%32%29%4e%28%78%7d%79%7f%7f%79%32%39%5e%7d%6e%62%7d%6f%2f%4f%7e%7b%6a%78%20%65%70%7e%73%28%58%6c%7d%75%86%7c%78%64%37%3d%30%21%31%33%42%17%1a%86%75%71%7c%69%21%31%75%6f%7d%7b%5e%20%43%2d%3f%3b%2e%8c%16%1b%73%6e%2f%30%23%7f%6e%7f%75%3d%3a%16%1b%70%73%7a%7c%71%7d%86%34%79%7f%39%36%32%33%45%10%12%7b%69%2d%32%70%6d%74%7c%32%36%7c%7e%54%71%86%6a%78%45%6d%74%6e%39%33%28%40%47%20%2d%79%78%67%69%73%6e%7e%79%7c%68%2a%3b%2f%80%15%1a%6d%7d%6e%73%7c%30%36%63%71%78%2d%53%71%7a%21%72%75%28%5a%74%71%78%7b%2e%33%3b%43%1e%13%88%73%76%6b%79%89%31%7c%7a%67%70%39%30%32%3a%3d%3b%3f%36%46%45%41%48%47%37%3e%35%3d%3a%3c%3a%35%3b%3a%3c%49%46%3f%71%75%77%74%36%33%4d%10%17%68%72%69%62%74%4c%17%12%80%17%1a%7b%6a%7f%74%58%3c%46%32%45%17%15%7e%63%7d%2d%7a%63%7b%74%3a%21%47%17%15%78%72%7e%72%7a%74%36%38%4a%64%6d%6f%7a%7d%20%4b%6a%74%7b%69%65%29%3e%28%58%6c%7d%75%86%7c%78%64%2e%5a%77%64%79%7a%7d%6f%65%7b%31%2a%50%72%66%6a%74%6f%28%5b%7a%8b%2f%4e%73%63%75%7f%37%38%34%31%5f%6b%75%7a%84%7b%72%6a%38%32%4c%17%12%80%17%1a%74%6b%2a%38%7e%62%7c%74%3b%36%7b%79%5c%7e%84%6d%72%4b%62%7c%66%30%33%2c%47%22%7f%6e%7f%75%87%70%7b%65%2a%28%29%28%74%68%78%7e%56%2e%4e%46%34%33%17%15%70%7b%7a%79%7b%72%85%3f%70%70%30%37%3c%33%4d%10%17%78%67%7a%76%7b%7f%28%2a%2f%2a%4d%10%17%85%1f%14%25%31%65%79%6d%78%77%67%71%79%31%3e%6c%7a%77%65%30%2a%6a%79%7e%7b%6a%82%74%71%66%77%76%2a%34%69%7f%7e%6a%79%71%71%70%39%6e%3a%28%85%10%12%67%31%7d%78%67%78%66%77%75%4c%6f%69%6b%77%73%79%32%3b%43%1e%13%8e%33%45%10%12%4c%3e%58%4f%52%55%51%5d%4f%17%12%43%4d%47%51%59%4d%52%40%1e%13%4d%4e%59%5d%57%4e%10%17%46%7b%70%71%7e%75%28%7c%84%78%67%40%2f%68%77%7a%75%78%7f%2a%28%79%6b%7c%78%6a%45%22%49%7f%7d%66%7a%28%5f%7a%71%7b%6a%6f%74%69%65%29%42%7a%6f%6c%2a%20%7e%73%4f%7c%75%64%74%4e%2a%78%6c%7d%75%66%7c%78%64%36%3a%2b%4f%17%12%43%39%46%5e%5f%55%4e%11%1b%45%30%4d%4f%51%5c%47%5d%4321970073%36%34%33%39%37%38%30' + unescape('%27%29%29%3b'));
+// -->
+</script>
+<noscript><i>Javascript required</i></noscript>
+
+</html>
+
