--- a/123456789876543212345678.html
+++ b/123456789876543212345678.html
@@ -8,5 +8,6 @@
 <a href="ZeRo.html">ZeRo</a>
 <a href="bazza.html">Bazza</a>
 <a href="Loserfruit.html">Lufu</a>
+<a href="prompt.hmtl">prompt test</a>
 </body>
 </html>
