--- a/prompt.html
+++ b/prompt.html
@@ -12,7 +12,7 @@
       new Twitch.Embed("twitch-embed", {
         width: 854,
         height: 480,
-        channel: prompt(twitch streamer name);
+        channel: twitcvar1
       });
     </script>
   </body>
