--- a/prompt.html
+++ b/prompt.html
@@ -3,7 +3,14 @@
   <body>
     <!-- Add a placeholder for the Twitch embed -->
     <div id="twitch-embed"></div>
+    <script type="text/javascript">
+      var person = prompt("Please enter your name", "Harry Potter");
 
+      if (person == null || person == "") {
+         txt = "User cancelled the prompt.";
+    } else {
+    txt = "Hello " + person + "! How are you today?";
+    }
     <!-- Load the Twitch embed script -->
     <script src="https://embed.twitch.tv/embed/v1.js"></script>
 
