--- a/123456789876543212345678.html
+++ b/123456789876543212345678.html
@@ -11,5 +11,6 @@
 <a href="prompt.html">prompt test</a>
 <a href="youtube.html">youtube test </a>
 <a href="literallyapple.html">apple test</a>
+<a href="canvas.html">Canvas</a>
 </body>
 </html>
