--- a/123456789876543212345678.html
+++ b/123456789876543212345678.html
@@ -12,5 +12,6 @@
 <a href="youtube.html">youtube test </a>
 <a href="literallyapple.html">apple test</a>
 <a href="canvas.html">Canvas</a>
+<a href="dino.html">dino</a>
 </body>
 </html>
