--- a/123456789876543212345678.html
+++ b/123456789876543212345678.html
@@ -13,6 +13,6 @@
 <a href="literallyapple.html">apple test</a>
 <a href="canvas.html">Canvas</a>
 <a href="dino.html">dino</a>
-<a href="dino.html">gba</a>
+<a href="gba.html">gba</a>
 </body>
 </html>
